src/snapshots/bluetui__help__tests__EnterPasskey-80.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                󱊷  Discard | ⇄ Nav | ↵  Submit | ^C ^X ^V ^Z Edit               "
"                                                                                "
