src/snapshots/bluetui__help__tests__EnterPinCode-121.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                                    󱊷  Discard | ⇄ Nav | ↵  Submit | ^C ^X ^V ^Z Edit                                    "
"                                                                                                                         "
