src/snapshots/bluetui__help__tests__SetDeviceAliasBox-120.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                                        󱊷  Discard | ↵  Apply | ^C ^X ^V ^Z Edit                                        "
"                                                                                                                        "
